Adds inctructions on how to increase Java heap memory.